[tool.poetry]
name = "aipl"
version = "0.1.0"
description = "Array-Inspired Pipeline Language"
authors = ["Saul Pwanson <code@saul.pw>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.6"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
trafilatura = "^1.6.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
lark = "^1.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aipl = "aipl.main:main"
